terraform/rds.tf
resource "aws_db_subnet_group" "default" {
  name       = "${var.project_name}-db-subnet-group"
  subnet_ids = slice(data.aws_subnets.vpc_subnets.ids, 0, 2) # use 2 subnets

  tags = {
    Name = "${var.project_name}-db-subnet-group"
  }
}

resource "aws_db_instance" "postgres" {
  identifier = "${var.project_name}-postgres"
  engine     = "postgres"
  engine_version = "17"
  instance_class = var.rds_instance_class
  allocated_storage = var.rds_allocated_storage
  db_name       = var.postgres_db_name
  username   = var.postgres_username
  password   = var.postgres_password
  db_subnet_group_name = aws_db_subnet_group.default.name
  vpc_security_group_ids = [aws_security_group.rds_sg.id]
  skip_final_snapshot = true
  publicly_accessible = false
  multi_az = false
  tags = {
    Name = "${var.project_name}-postgres"
  }
}
